--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,17 +1,18 @@
 <IfModule mod_rewrite.c>
     RewriteEngine On
+    RewriteBase /
 
     # Quitar la extensión .php
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME}.php -f
     RewriteRule ^(.*)$ $1.php [L]
 
-    # Reescribir URL para ocultar las variables
+    # Reescribir URL para ocultar las variables en edit
     RewriteRule ^edit/([0-9]+)/([0-9]+)$ edit.php?codConsultorio=$1&codHora=$2 [L,QSA]
 
     # Reescribir URL para ocultar las variables en admin
     RewriteRule ^admin/([0-9]+)$ admin.php?codConsultorio=$1 [L,QSA]
 
     # Reescribir URL para ocultar las variables en index
-    RewriteRule ^index/([0-9]+)$ index.php?codConsultorio=$1 [L,QSA]
+    RewriteRule ^([0-9]+)$ index.php?codConsultorio=$1 [L,QSA]
 </IfModule>
