--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,25 @@ version: '3.8'
 
 services:
   web:
-    image: nginx:latest
+    image: 'nginx:latest'
     ports:
-      - "3000:3000"
+      - '3000:80'  # Exponiendo el puerto 80 del contenedor en el puerto 3000 del host
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./public:/var/www/html
+      - './nginx.conf:/etc/nginx/conf.d/default.conf:ro'
+      - './public:/var/www/html'
     depends_on:
       - php
+    networks:
+      - n0c0gg0
+    restart: unless-stopped
 
   php:
-    image: php:7.4-fpm
+    image: 'php:7.4-fpm'
     volumes:
-      - ./public:/var/www/html
+      - './public:/var/www/html'
+    networks:
+      - n0c0gg0
+    restart: unless-stopped
+
+networks:
+  n0c0gg0:
