--- a/nginx.conf
+++ b/nginx.conf
@@ -1,22 +1,28 @@
-server {
-    listen 80;
-    server_name localhost;
+events {
+    # configuración de eventos (puede estar vacía)
+}
 
-    root /var/www/html;
-    index index.php index.html;
+http {
+    server {
+        listen 80;
+        server_name localhost;
 
-    location / {
-        try_files $uri $uri/ /index.php?$query_string;
-    }
+        root /var/www/html;
+        index index.php index.html;
 
-    location ~ \.php$ {
-        include fastcgi_params;
-        fastcgi_pass php:9000;
-        fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-    }
+        location / {
+            try_files $uri $uri/ /index.php?$query_string;
+        }
 
-    location ~ /\.ht {
-        deny all;
+        location ~ \.php$ {
+            include fastcgi_params;
+            fastcgi_pass php:9000;
+            fastcgi_index index.php;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        }
+
+        location ~ /\.ht {
+            deny all;
+        }
     }
 }
