--- a/nginx.conf
+++ b/nginx.conf
@@ -15,7 +15,7 @@ http {
         }
 
         location ~ \.php$ {
-            include fastcgi_params;
+            include /etc/nginx/fastcgi_params;
             fastcgi_pass php:9000;
             fastcgi_index index.php;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
