--- a/nginx.conf
+++ b/nginx.conf
@@ -15,7 +15,7 @@ http {
             fastcgi_index index.php;
             fastcgi_param REQUEST_METOD $request_method;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            include fastcgi_params;
+            include fcgi.conf;
         }
 
         location / {
