--- a/nginx.conf
+++ b/nginx.conf
@@ -1,25 +1,60 @@
+worker_processes 5;
+daemon off;
+
+worker_rlimit_nofile 8192;
+
 events {
-    # configuración de eventos (puede estar vacía)
+    worker_connections 4096;  # Default: 1024
 }
 
 http {
+    include $!{nginx}/conf/mime.types;
+    index index.html index.htm index.php;
+    default_type application/octet-stream;
+    log_format main '$remote_addr - $remote_user [$time_local]  $status '
+                      '"$request" $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
+    access_log /dev/stdout;
+    error_log /dev/stdout;
+    sendfile on;
+    tcp_nopush on;
+    server_names_hash_bucket_size 128;  # this seems to be required for some vhosts
+
     server {
-        listen 80;
+        listen ${PORT};
+        listen [::]:${PORT};
         server_name localhost;
 
-        root /app/public;
+        root $if(NIXPACKS_PHP_ROOT_DIR)(${NIXPACKS_PHP_ROOT_DIR}, /app/public);
+
+        add_header X-Frame-Options "SAMEORIGIN";
+        add_header X-Content-Type-Options "nosniff";
         index index.php;
+        charset utf-8;
+
+        $if(IS_LARAVEL) (
+            location / {
+                try_files $uri $uri/ /index.php?$query_string;
+            }
+            error_page 404 /index.php;
+        ) else (
+            location / {
+                try_files $uri $uri/ /index.php?$query_string;
+            }
+        )
+
+        location = /favicon.ico { access_log off; log_not_found off; }
+        location = /robots.txt  { access_log off; log_not_found off; }
 
         location ~ \.php$ {
-            fastcgi_pass app:9000;
-            fastcgi_index index.php;
-            fastcgi_param REQUEST_METOD $request_method;
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            include fcgi.conf;
+            fastcgi_pass 127.0.0.1:9000;
+            fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+            include $!{nginx}/conf/fastcgi_params;
+            include $!{nginx}/conf/fastcgi.conf;
         }
 
-        location / {
-            try_files $uri $uri/ /index.php?$query_string;
+        location ~ /\.(?!well-known).* {
+            deny all;
         }
     }
 }
