--- a/nginx.template.conf
+++ b/nginx.template.conf
@@ -1,6 +1,6 @@
 http {
     server {
-        listen 80;
+        listen 3000;
         server_name localhost;
 
         root /app/public;
@@ -11,7 +11,7 @@ http {
         }
 
         location ~ \.php$ {
-            fastcgi_pass app:9000;
+            fastcgi_pass 127.0.0.1:9000;
             fastcgi_index index.php;
             fastcgi_param REQUEST_METOD $request_method;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
