--- a/nginx.template.conf
+++ b/nginx.template.conf
@@ -9,8 +9,7 @@ events {
 
 http {
     server {
-        listen ${PORT};
-        listen [::]:${PORT};
+        listen 3001;
         server_name localhost;
 
         $if(NIXPACKS_PHP_ROOT_DIR) (
