--- a/nginx.template.conf
+++ b/nginx.template.conf
@@ -9,47 +9,23 @@ events {
 
 http {
     server {
-        listen 3001;
-        server_name localhost;
+        listen 3000;
+        server_name pco0w4k.190.194.229.17.sslip.io;
 
-        $if(NIXPACKS_PHP_ROOT_DIR) (
-            root ${NIXPACKS_PHP_ROOT_DIR};
-        ) else (
-            root /app;
-        )
-
-        add_header X-Frame-Options "SAMEORIGIN";
-        add_header X-Content-Type-Options "nosniff";
-
+        root /app/public;
         index index.php;
 
-        charset utf-8;
-
-        $if(IS_LARAVEL) (
-            location / {
-                try_files $uri $uri/ /index.php?$query_string;
-            }
-        ) else ()
-        
-        $if(NIXPACKS_PHP_FALLBACK_PATH) (
-            location / {
-            try_files $uri $uri/ ${NIXPACKS_PHP_FALLBACK_PATH}?$query_string;
-            }
-        ) else ()
-
-        $if(IS_LARAVEL) (
-            error_page 404 /index.php;
-        ) else ()
+        location / {
+            try_files $uri $uri/ /index.php?$query_string;
+        }
 
         location ~ \.php$ {
             fastcgi_pass 127.0.0.1:9000;
-            fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+            fastcgi_index index.php;
+            fastcgi_param REQUEST_METOD $request_method;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             include $!{nginx}/conf/fastcgi_params;
             include $!{nginx}/conf/fastcgi.conf;
-        }
-
-        location ~ /\.(?!well-known).* {
-            deny all;
         }
     }
 }
