--- a/nginx.template.conf
+++ b/nginx.template.conf
@@ -10,7 +10,7 @@ events {
 http {
     server {
         listen 3000;
-        server_name pco0w4k.190.194.229.17.sslip.io;
+        server_name localhost;
 
         root /app/public;
         index index.php;
