--- a/nginx.template.conf
+++ b/nginx.template.conf
@@ -6,7 +6,7 @@ http {
         listen 3000;
         server_name localhost;
 
-        root /public;
+        root /;
         index index.php;
 
         location / {
