--- a/nginx.template.conf
+++ b/nginx.template.conf
@@ -1,4 +1,10 @@
+worker_processes 5;
+daemon off;
+
+worker_rlimit_nofile 8192;
+
 events {
+    worker_connections  4096;  # Default: 1024
 }
 
 http {
