--- a/nginx.template.conf
+++ b/nginx.template.conf
@@ -14,6 +14,7 @@ server {
         fastcgi_index index.php;
         fastcgi_param REQUEST_METOD $request_method;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        include $!{nginx}/conf/fastcgi_params;
         include $!{nginx}/conf/fastcgi.conf;
     }
 }
