--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,23 @@
 version: '3.8'
 
 services:
-  web:
-    image: 'nginx:latest'
+  nginx:
+    build:
+      context: .
+      dockerfile: .docker/nginx/Dockerfile
+    volumes:
+      - ./src:/var/www/html
+    image: 'nginx:alpine'
     ports:
-      - '3000:3000'  # Exponiendo el puerto 80 del contenedor en el puerto 3000 del host
-    volumes:
-      - './nginx.conf:/etc/nginx/conf.d/default.conf:ro'
-      - './public:/var/www/html'
-    depends_on:
-      - php
-    restart: unless-stopped
-
+      - '8080:80'
+    networks:
+      - internal
   php:
-    image: 'php:8.4-rc-alpine'
+    image: 'php:fpm-alpine'
     volumes:
-      - './public:/var/www/html'
-    restart: unless-stopped
+      - ./src:/var/www/html
+    networks:
+      - internal
+networks:
+  internal:
+    driver: bridge
