--- a/src/.htaccess
+++ b/src/.htaccess
@@ -4,3 +4,13 @@ RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}.php -f
 RewriteRule ^(.*)$ $1.php [L]
+
+# Permitir acceso a todos desde cualquier origen
+<Directory "/var/www/html">
+    Require all granted
+    Options -Indexes +FollowSymLinks
+    AllowOverride All
+</Directory>
+
+# Establecer índice predeterminado
+DirectoryIndex index.php index.html
