--- a/my-apache-config.conf
+++ b/my-apache-config.conf
@@ -4,9 +4,12 @@
     ServerName localhost
 
     <Directory "/var/www/html">
-        Options Indexes FollowSymLinks
+        Options FollowSymLinks
         AllowOverride All
         Require all granted
+        DirectoryIndex index.php index.html
+        # Deshabilitar explícitamente el listado de directorios
+        Options -Indexes
     </Directory>
 
     ErrorLog ${APACHE_LOG_DIR}/error.log
