--- a/my-apache-config.conf
+++ b/my-apache-config.conf
@@ -12,6 +12,14 @@
         Options -Indexes
     </Directory>
 
+    # Evitar bucles de redirección
+    <IfModule mod_rewrite.c>
+        RewriteEngine On
+        # Evitar bucles de redirección para /index.php
+        RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s/+index\.php\s [NC]
+        RewriteRule ^ / [R=301,L]
+    </IfModule>
+
     ErrorLog ${APACHE_LOG_DIR}/error.log
     CustomLog ${APACHE_LOG_DIR}/access.log combined
 </VirtualHost>
