--- a/src/.htaccess
+++ b/src/.htaccess
@@ -1,19 +1,14 @@
-RewriteEngine On
-
 # Establecer index.php como archivo predeterminado
 DirectoryIndex index.php
 
-# Deshabilitar explícitamente el listado de directorios
+# Deshabilitar listado de directorios
 Options -Indexes
 
-# No redirigir si el archivo ya es index.php
-RewriteCond %{THE_REQUEST} !\ /index\.php
-# Redirigir explícitamente la raíz al index.php solo si no es una solicitud directa a index.php
-RewriteRule ^$ index.php [L]
+# Habilitar el motor de reescritura solo para URLs amigables
+RewriteEngine On
 
-# Redirigir las solicitudes a archivos .php sin la extensión
-# Solo si no es un archivo o directorio real
+# Regla simple para URLs amigables (sin usar redirecciones adicionales)
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}.php -f
-RewriteRule ^([^/]+)/?$ $1.php [L]
+RewriteRule ^([^/]+)/?$ $1.php [QSA,L]
