--- a/my-apache-config.conf
+++ b/my-apache-config.conf
@@ -3,14 +3,14 @@
     DocumentRoot /var/www/html
     ServerName localhost
 
-    # Configuración básica del directorio raíz
     <Directory "/var/www/html">
         Options FollowSymLinks
         AllowOverride All
         Require all granted
+        DirectoryIndex index.php
+        Options -Indexes
     </Directory>
 
-    # Logging
     ErrorLog ${APACHE_LOG_DIR}/error.log
     CustomLog ${APACHE_LOG_DIR}/access.log combined
 </VirtualHost>
