--- a/my-apache-config.conf
+++ b/my-apache-config.conf
@@ -4,12 +4,9 @@
     ServerName localhost
 
     <Directory "/var/www/html">
-        Options FollowSymLinks
+        Options Indexes FollowSymLinks
         AllowOverride All
         Require all granted
-        DirectoryIndex index.php index.html
-        # Deshabilitar explícitamente el listado de directorios
-        Options -Indexes
     </Directory>
 
     ErrorLog ${APACHE_LOG_DIR}/error.log
