--- a/my-apache-config.conf
+++ b/my-apache-config.conf
@@ -1,4 +1,17 @@
-<Directory "/var/www/html/">
-    AllowOverride All
-    Require all granted
-</Directory>
+<VirtualHost *:80>
+    ServerAdmin webmaster@localhost
+    DocumentRoot /var/www/html
+    
+    <Directory "/var/www/html/">
+        AllowOverride All
+        Require all granted
+        Options Indexes FollowSymLinks
+    </Directory>
+    
+    # Permitir conexiones desde cualquier host
+    ServerName localhost
+    ServerAlias * 181.170.13.167
+    
+    ErrorLog ${APACHE_LOG_DIR}/error.log
+    CustomLog ${APACHE_LOG_DIR}/access.log combined
+</VirtualHost>
