--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -3,8 +3,6 @@ version: '3.8'
 services:
   web:
     image: ${REGISTRY:-localhost}/suyay_web:${TAG:-latest}
-    ports:
-      - "0.0.0.0:80:80"
     depends_on:
       - db
     environment:
@@ -45,7 +43,7 @@ services:
 
 networks:
   suyay-network:
-    driver: overlay
+    external: true
 
 volumes:
   mysql_data:
