--- a/nginx-site.conf
+++ b/nginx-site.conf
@@ -1,14 +1,21 @@
 server {
     listen 80 default_server;
+    server_name localhost;
     
+    # Enable debug mode
+    error_log /var/log/nginx/error.log debug;
+    access_log /var/log/nginx/access.log;
+
     root /var/www/html;
     index index.php index.html;
 
-    # Allow directory listings for debugging
+    # Enable directory listing temporarily for debugging
     autoindex on;
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
+        # Set proper permissions
+        add_header 'Access-Control-Allow-Origin' '*';
     }
 
     location ~ \.php$ {
@@ -20,6 +27,11 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
         fastcgi_param DOCUMENT_ROOT $document_root;
+        
+        # Add detailed FastCGI parameters for debugging
+        fastcgi_intercept_errors on;
+        fastcgi_connect_timeout 300;
+        fastcgi_read_timeout 300;
     }
 
     # Deny access to .htaccess files
