--- a/nginx.conf
+++ b/nginx.conf
@@ -1,16 +1,41 @@
 events {}
 
 http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
+
+    # Enable better logging
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
+
+    access_log  /var/log/nginx/access.log  main;
+    error_log   /var/log/nginx/error.log  debug;
+
+    sendfile        on;
+    keepalive_timeout  65;
+
     server {
         listen 80;
         server_name app1.cardozo.com.ar;
 
         location / {
-            proxy_pass http://web:80;  # Changed from suyay_web:80 to web:80 to match service name
+            # Adding slash at the end to ensure proper URL resolution
+            proxy_pass http://web:80/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Additional settings to improve proxy behavior
+            proxy_connect_timeout 300s;
+            proxy_read_timeout 300s;
+            proxy_http_version 1.1;
+            proxy_buffering off;
+            
+            # Enable WebSocket support
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
         }
     }
 }
