--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -3,6 +3,8 @@ version: '3.8'
 services:
   web:
     image: ${REGISTRY:-localhost}/suyay_web:${TAG:-latest}
+    ports:
+      - "0.0.0.0:80:80"
     depends_on:
       - db
     environment:
@@ -43,7 +45,7 @@ services:
 
 networks:
   suyay-network:
-    external: true
+    driver: overlay
 
 volumes:
   mysql_data:
