--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -3,8 +3,9 @@ version: '3.8'
 services:
   web:
     image: ${REGISTRY:-localhost}/suyay_web:${TAG:-latest}
-    ports:
-      - "0.0.0.0:80:80"
+    # Remove direct port exposure since Traefik will handle this
+    # ports:
+    #  - "0.0.0.0:80:80"
     depends_on:
       - db
     environment:
@@ -13,6 +14,7 @@ services:
       - ./src:/var/www/html
     networks:
       - suyay-network
+      - traefik-public  # Add Traefik network
     deploy:
       replicas: 2
       update_config:
@@ -21,7 +23,11 @@ services:
       restart_policy:
         condition: on-failure
         max_attempts: 3
-      # Removed the placement constraint to allow deployment on any node
+      labels:
+        - "traefik.enable=true"
+        - "traefik.http.routers.suyay.rule=Host(`app1.cardozo.com.ar`)"
+        - "traefik.http.services.suyay.loadbalancer.server.port=80"
+        - "traefik.docker.network=traefik-public"
 
   db:
     image: mysql:8.0
@@ -46,6 +52,8 @@ services:
 networks:
   suyay-network:
     driver: overlay
+  traefik-public:
+    external: true  # Use the network created by the Traefik stack
 
 volumes:
   mysql_data:
