--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -24,6 +24,7 @@ services:
       labels:
         - "traefik.enable=true"
         - "traefik.http.routers.web.rule=Host(`app1.cardozo.com.ar`)"
+        - "traefik.http.services.web.loadbalancer.server.port=80"
         - "traefik.docker.network=traefik-public"
 
   db:
