--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -21,9 +21,12 @@ services:
       labels:
         - "traefik.enable=true"
         - "traefik.http.routers.web.rule=Host(`app1.cardozo.com.ar`)"
-        - "traefik.http.routers.web.entrypoints=web"
+        # Update these lines for HTTPS
+        - "traefik.http.routers.web.entrypoints=websecure"
+        - "traefik.http.routers.web.tls=true"
+        - "traefik.http.routers.web.tls.certresolver=myresolver"
         - "traefik.http.services.web.loadbalancer.server.port=80"
-        - "traefik.docker.network=traefik_traefik-public"  # Match external network name exactly
+        - "traefik.docker.network=traefik_traefik-public"
 
   db:
     image: mysql:8.0
