--- a/.env
+++ b/.env
@@ -1,9 +1,6 @@
-# Variables de entorno para Coolify
+# Variables de entorno para testing en local
 DB_HOST=db
 DB_PORT=3306
 DB_NAME=suyay_db
 DB_USER=root
 DB_PASSWORD=suyay_password
-
-# Variables adicionales para entorno de producción
-ENVIRONMENT=production
