--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Log in to the Container registry
         uses: docker/login-action@v3
-        with: # <-- CORREGIDO AQUÍ
+        with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
@@ -61,15 +61,15 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Sync repository files to server via rsync
-        uses: easingthemes/ssh-deploy@v5.2.1
+        uses: easingthemes/ssh-deploy@v6 # <-- CORREGIDO A @v6
         env:
           SSH_PRIVATE_KEY: ${{ secrets.DEPLOY_SSH_PRIVATE_KEY }}
-          ARGS: "-avzr --delete"
-          SOURCE: "."
-          REMOTE_HOST: ${{ secrets.VPS_HOST }}
-          REMOTE_USER: ${{ secrets.VPS_USER }}
-          TARGET: ${{ env.REMOTE_DEPLOY_PATH }}
-          EXCLUDE: "/src/, /.git/, /.github/"
+          ARGS: "-avzr --delete" # rsync args
+          SOURCE: "." # source directory
+          REMOTE_HOST: ${{ secrets.VPS_HOST }} # target host
+          REMOTE_USER: ${{ secrets.VPS_USER }} # target user
+          TARGET: ${{ env.REMOTE_DEPLOY_PATH }} # target directory
+          EXCLUDE: "/src/, /.git/, /.github/" # exclude directories
 
       - name: Update secrets and Deploy Stack via SSH
         uses: appleboy/ssh-action@v1.0.3
@@ -87,6 +87,7 @@ jobs:
             if docker secret inspect db_name >/dev/null 2>&1; then docker secret rm db_name; fi
             echo "${{ secrets.DB_NAME }}" | docker secret create db_name -
             echo "✅ Docker Secrets updated successfully."
+
             echo "🚀 Deploying Docker Stack using synced files..."
             docker stack deploy --with-registry-auth -c ${{ env.REMOTE_DEPLOY_PATH }}/docker-stack.yml suyay 2>&1
             echo "🎉 Stack deployment command executed successfully."
